--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "mocha": "^4.0.1"
+    "mocha": "^4.0.1",
+    "mocha-junit-reporter": "^2.0.0"
   }
 }
